Fix compile error, deprecated method and no use things